--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -16,6 +16,23 @@
         padding-right: 30px;
     }
 }
+
+@media (max-width: 1150px) {
+    .order__inner {
+        flex-direction: column;
+        width: 100%;
+    }
+    .order-box {
+        width: 100%;
+    }
+    .order .container {
+        padding: 0;
+    }
+    .order-top {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+}
 @media (max-width: 1000px) {
     .header__wrapper {
         display: none;
@@ -149,7 +166,8 @@
     .recalls__inner {
         flex-direction: column;
     }
-    .recalls__title, .recalls-form__box {
+    .recalls__title,
+    .recalls-form__box {
         margin-left: 15px;
         margin-right: 15px;
     }
@@ -160,7 +178,98 @@
     .recalls-form__inner {
         padding: 15px;
     }
-    
+    .order-top {
+        gap: 30px;
+        flex-direction: column;
+    }
+    .order-top__item::after {
+        bottom: -70%;
+        top: unset;
+        left: 50%;
+        transform: translateX(-50%) rotate(90deg) translateY(0%);
+    }
+    .order-form-top {
+        flex-direction: column;
+        position: relative;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #8A8A8A;
+    }
+    .order-form-top__text {
+        width: 100%;
+        text-align: center;
+        border-bottom: 1px solid #8a8a8a;
+    }
+    .order-form-top__text {
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+    }
+    .order-form-body {
+        max-width: unset;
+    }
+    .order-form-body-item {
+        padding-left: unset;
+    }
+    .order-form-body-item__text {
+        padding-left: 50px;
+    }
+    .main-order-two .order-form-top {
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 700px) {
+    .order-form-body-item {
+        &::before {
+            content: unset;
+        }
+    }
+    .order-form-body-item:nth-child(2) {
+        &::before {
+            content: unset;
+        }
+        .order-form-body-item__text {
+            margin-bottom: 30px;
+            &::before {
+                content: '2';
+            }
+        }
+    }
+    .order-form-body-item:nth-child(3) {
+        &::before {
+            content: unset;
+        }
+        .order-form-body-item__text {
+            margin-bottom: 45px;
+            &::before {
+                content: '3';
+            }
+        }
+        
+    }
+    .order-form-body-item-box__input {
+        padding-right: 50px;
+    }
+    .order-form-body-item__text {
+        position: relative;
+        &::before {
+        content: '1';
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 35px;
+        height: 35px;
+        border: 1px solid #145896;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 600;
+        font-size: 18px;
+        transform: translateY(-50%);
+        line-height: 26px;
+        color: #145896;
+        }
+    }
 }
 
 @media (max-width: 650px) {
@@ -272,5 +381,43 @@
     }
     .recalls-form__title {
         text-align: center;
+    }
+    .order-expectation {
+        order: 3;
+    }
+    .order-box:nth-child(1) {
+        position: relative;
+        overflow: hidden;
+        &::before {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background: #8a8a8a;
+            position: absolute;
+            bottom: 0;
+            left: 15px;
+            right: 15px;
+        }
+        &::after {
+            content: "";
+            width: 15px;
+            height: 2px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            background: #fff;
+        }
+    }
+    .order__inner {
+        gap: 0;
+    }
+    .order-box:nth-child(3) {
+        margin-bottom: 15px;
+    }
+    .order-form-top__box svg {
+        min-width: 32px;
+        min-height: 32px;
+        width: 32px;
+        height: 32px;
     }
 }
