--- a/scss/style.css
+++ b/scss/style.css
@@ -197,6 +197,9 @@ body {
 .header-lang--active .header-lang__list {
   display: flex;
 }
+.header-lang--active svg {
+  transform: rotate(180deg);
+}
 
 .exchange {
   padding-top: 35px;
@@ -1879,9 +1882,23 @@ body {
   }
 }
 
+.main-order-two .order-form-top {
+  margin-bottom: 30px;
+}
+
 .order {
   padding-top: 70px;
   padding-bottom: 40px;
+}
+@media (max-width: 1200px) {
+  .order {
+    padding-top: calc(30px + 40 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order {
+    padding-bottom: calc(30px + 10 * ((100vw - 390px) / 810));
+  }
 }
 .order__inner {
   display: flex;
@@ -1890,12 +1907,22 @@ body {
   gap: 20px;
   margin-bottom: 40px;
 }
+@media (max-width: 1200px) {
+  .order__inner {
+    margin-bottom: calc(30px + 10 * ((100vw - 390px) / 810));
+  }
+}
 
 .order-top {
   margin-bottom: 70px;
   display: flex;
   justify-content: space-between;
   gap: 60px;
+}
+@media (max-width: 1200px) {
+  .order-top {
+    margin-bottom: calc(30px + 40 * ((100vw - 390px) / 810));
+  }
 }
 .order-top__item {
   font-weight: 600;
@@ -1942,19 +1969,40 @@ body {
   justify-content: space-between;
   background: #fff;
   flex-grow: 1;
+  gap: 15px;
+}
+@media (max-width: 1200px) {
+  .order-box {
+    gap: calc(10px + 5 * ((100vw - 390px) / 810));
+  }
 }
 .order-box__text {
   font-weight: 500;
-  font-size: 24px;
   line-height: 26px;
   color: #145896;
+  font-size: 24px;
+}
+@media (max-width: 1200px) {
+  .order-box__text {
+    font-size: calc(20px + 4 * ((100vw - 390px) / 810));
+  }
 }
 .order-box__crypto {
+  text-align: right;
   margin-left: auto;
   font-size: 24px;
   line-height: 29px;
   color: #041e35;
-  margin-right: 15px;
+}
+@media (max-width: 1200px) {
+  .order-box__crypto {
+    font-size: calc(20px + 4 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order-box__crypto {
+    line-height: calc(24px + 5 * ((100vw - 390px) / 810));
+  }
 }
 .order-box__crypto span {
   color: #c1c1c1;
@@ -2001,6 +2049,18 @@ body {
 .order-form {
   background: #ffffff;
   padding: 25px 15px 30px 15px;
+  padding-top: 25px;
+  padding-bottom: 30px;
+}
+@media (max-width: 1200px) {
+  .order-form {
+    padding-top: calc(20px + 5 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order-form {
+    padding-bottom: calc(40px + -10 * ((100vw - 390px) / 810));
+  }
 }
 .order-form__button {
   font-weight: 700;
@@ -2018,9 +2078,16 @@ body {
   min-width: 175px;
   max-width: 175px;
   background: #ff4e56;
+  border: 1px solid transparent;
   border-radius: 30px;
   justify-content: center;
   margin-bottom: 30px;
+  transition: border 0.3s, color 0.3s, background 0.3s;
+}
+.order-form__button:hover {
+  background: transparent;
+  border: 1px solid #ff4e56;
+  color: #ff4e56;
 }
 .order-form__btn {
   font-weight: 700;
@@ -2038,6 +2105,9 @@ body {
   color: #000000;
   margin-bottom: 30px;
 }
+.order-form__btn:hover {
+  text-decoration: unset;
+}
 .order-form__text {
   font-size: 14px;
   line-height: 21px;
@@ -2048,7 +2118,17 @@ body {
   max-width: 480px;
 }
 .order-form__text a {
-  font-weight: 600px;
+  font-weight: 600;
+  color: #145896;
+}
+.order-form__text a:hover {
+  text-decoration: underline;
+}
+.order-form__text-info {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  margin-bottom: 30px;
   color: #145896;
 }
 
@@ -2058,7 +2138,18 @@ body {
   justify-content: space-between;
   padding-bottom: 20px;
   border-bottom: 1px solid #c5c5c5;
+  font-size: 14px;
   margin-bottom: 40px;
+}
+@media (max-width: 1200px) {
+  .order-form-top {
+    font-size: calc(13px + 1 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order-form-top {
+    margin-bottom: calc(20px + 20 * ((100vw - 390px) / 810));
+  }
 }
 .order-form-top__text {
   font-weight: 500;
@@ -2067,15 +2158,33 @@ body {
   color: #145896;
 }
 .order-form-top__box {
-  gap: 13px;
   display: flex;
   align-items: center;
+  gap: 13px;
+}
+.order-form-top__box svg {
+  display: block;
+  min-width: 20px;
+  min-height: 20px;
+  width: 20px;
+  height: 20px;
+  flex-grow: 1;
+}
+@media (max-width: 1200px) {
+  .order-form-top__box {
+    gap: calc(18px + -5 * ((100vw - 390px) / 810));
+  }
 }
 .order-form-top__box-text {
   max-width: 480px;
   font-size: 14px;
   line-height: 21px;
   color: #041e35;
+}
+@media (max-width: 1200px) {
+  .order-form-top__box-text {
+    font-size: calc(13px + 1 * ((100vw - 390px) / 810));
+  }
 }
 
 .order-form-body {
@@ -2085,6 +2194,11 @@ body {
   margin-right: auto;
   gap: 35px;
   max-width: 600px;
+}
+@media (max-width: 1200px) {
+  .order-form-body {
+    gap: calc(30px + 5 * ((100vw - 390px) / 810));
+  }
 }
 
 .order-form-body-item {
@@ -2123,10 +2237,10 @@ body {
 .order-form-body-item:nth-child(2) .order-form-body-item-box__input {
   padding-left: 60px;
 }
-
-.order-form-body-item:nth-child(3) {
+.order-form-body-item:nth-child(2) .order-form-body-item__text {
   margin-bottom: 30px;
 }
+
 .order-form-body-item:nth-child(3)::before {
   content: "3";
 }
@@ -2135,6 +2249,17 @@ body {
   padding-bottom: 10px;
   border-bottom: 1px solid #c5c5c5;
   position: relative;
+}
+.order-form-body-item-box::before {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  content: "";
 }
 .order-form-body-item-box__input {
   width: 100%;
@@ -2145,6 +2270,16 @@ body {
   align-items: center;
   color: #000000;
   padding-right: 40px;
+}
+@media (max-width: 1200px) {
+  .order-form-body-item-box__input {
+    font-size: calc(14px + 4 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order-form-body-item-box__input {
+    line-height: calc(17px + 5 * ((100vw - 390px) / 810));
+  }
 }
 .order-form-body-item-box__input::-moz-placeholder {
   font-size: 18px;
@@ -2167,6 +2302,12 @@ body {
   position: absolute;
   width: 30px;
   height: 30px;
+  z-index: 6;
+}
+@media (max-width: 1200px) {
+  .order-form-body-item-box__btn {
+    top: calc(-7px + 3 * ((100vw - 390px) / 810));
+  }
 }
 .order-form-body-item-box__btn-img {
   width: 30px;
@@ -2174,12 +2315,23 @@ body {
 }
 .order-form-body-item-box__text {
   font-weight: 700;
+  z-index: 6;
   font-size: 18px;
   line-height: 22px;
   color: #145896;
   position: absolute;
   left: 0;
   top: 0;
+}
+@media (max-width: 1200px) {
+  .order-form-body-item-box__text {
+    font-size: calc(16px + 2 * ((100vw - 390px) / 810));
+  }
+}
+@media (max-width: 1200px) {
+  .order-form-body-item-box__text {
+    line-height: calc(19px + 3 * ((100vw - 390px) / 810));
+  }
 }
 
 @media (max-width: 1200px) {
@@ -2196,6 +2348,22 @@ body {
   }
   .for-partners-bottom-item {
     padding-right: 30px;
+  }
+}
+@media (max-width: 1150px) {
+  .order__inner {
+    flex-direction: column;
+    width: 100%;
+  }
+  .order-box {
+    width: 100%;
+  }
+  .order .container {
+    padding: 0;
+  }
+  .order-top {
+    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 @media (max-width: 1000px) {
@@ -2362,7 +2530,8 @@ body {
   }
 }
 @media (max-width: 900px) {
-  .recalls__title, .recalls-form__box {
+  .recalls__title,
+.recalls-form__box {
     margin-left: 15px;
     margin-right: 15px;
   }
@@ -2376,6 +2545,108 @@ body {
 @media (max-width: 900px) {
   .recalls-form__inner {
     padding: 15px;
+  }
+}
+@media (max-width: 900px) {
+  .order-top {
+    gap: 30px;
+    flex-direction: column;
+  }
+}
+@media (max-width: 900px) {
+  .order-top__item::after {
+    bottom: -70%;
+    top: unset;
+    left: 50%;
+    transform: translateX(-50%) rotate(90deg) translateY(0%);
+  }
+}
+@media (max-width: 900px) {
+  .order-form-top {
+    flex-direction: column;
+    position: relative;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #8A8A8A;
+  }
+}
+@media (max-width: 900px) {
+  .order-form-top__text {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #8a8a8a;
+  }
+}
+@media (max-width: 900px) {
+  .order-form-top__text {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 900px) {
+  .order-form-body {
+    max-width: unset;
+  }
+}
+@media (max-width: 900px) {
+  .order-form-body-item {
+    padding-left: unset;
+  }
+}
+@media (max-width: 900px) {
+  .order-form-body-item__text {
+    padding-left: 50px;
+  }
+}
+@media (max-width: 900px) {
+  .main-order-two .order-form-top {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 700px) {
+  .order-form-body-item::before {
+    content: unset;
+  }
+  .order-form-body-item:nth-child(2)::before {
+    content: unset;
+  }
+  .order-form-body-item:nth-child(2) .order-form-body-item__text {
+    margin-bottom: 30px;
+  }
+  .order-form-body-item:nth-child(2) .order-form-body-item__text::before {
+    content: "2";
+  }
+  .order-form-body-item:nth-child(3)::before {
+    content: unset;
+  }
+  .order-form-body-item:nth-child(3) .order-form-body-item__text {
+    margin-bottom: 45px;
+  }
+  .order-form-body-item:nth-child(3) .order-form-body-item__text::before {
+    content: "3";
+  }
+  .order-form-body-item-box__input {
+    padding-right: 50px;
+  }
+  .order-form-body-item__text {
+    position: relative;
+  }
+  .order-form-body-item__text::before {
+    content: "1";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 35px;
+    height: 35px;
+    border: 1px solid #145896;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 18px;
+    transform: translateY(-50%);
+    line-height: 26px;
+    color: #145896;
   }
 }
 @media (max-width: 650px) {
@@ -2484,5 +2755,43 @@ body {
   }
   .recalls-form__title {
     text-align: center;
+  }
+  .order-expectation {
+    order: 3;
+  }
+  .order-box:nth-child(1) {
+    position: relative;
+    overflow: hidden;
+  }
+  .order-box:nth-child(1)::before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #8a8a8a;
+    position: absolute;
+    bottom: 0;
+    left: 15px;
+    right: 15px;
+  }
+  .order-box:nth-child(1)::after {
+    content: "";
+    width: 15px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: #fff;
+  }
+  .order__inner {
+    gap: 0;
+  }
+  .order-box:nth-child(3) {
+    margin-bottom: 15px;
+  }
+  .order-form-top__box svg {
+    min-width: 32px;
+    min-height: 32px;
+    width: 32px;
+    height: 32px;
   }
 }/*# sourceMappingURL=style.css.map */
